--- a/Assignment0/.classpath
+++ b/Assignment0/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="/Users/justinrodrigues/Documents/JARS/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="/Users/justinrodrigues/Documents/JARS/junit-4.13 (1).jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX 15"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
